2002-02-24  Andrew Cagney  <ac131313@redhat.com>

	From wiz at danbala:
	* gdbmi.texinfo: Fix grammar and typos.
	Fix PR gdb/287.

2002-02-03  Jim Blandy  <jimb@redhat.com>

	* mi-cmd-stack.c (list_args_or_locals): Move declaration of
	print_me inside the loop body, so it gets re-initialized every
	iteration.  The cases for the different symbol kinds leave
	print_me unchanged if they don't want the symbol printed.

2002-01-22  Andrew Cagney  <ac131313@redhat.com>

	* gdbmi.texinfo: Remove makeinfo 3.12 hacks.

2002-01-21  Andrew Cagney  <ac131313@redhat.com>

	* mi-cmd-stack.c: Remove #else clause of #ifdef UI_OUT.
	* mi-cmd-break.c: Ditto.
	* mi-main.c: Ditto.

2001-12-30  Eli Zaretskii  <eliz@is.elta.co.il>

	* gdbmi.texinfo: Fix the application of GFDL in the Copyright notice.

2001-10-12  Daniel Jacobowitz  <drow@mvista.com>

	* mi-cmd-stack.c (list_args_or_locals): Use ALL_BLOCK_SYMBOLS.

2001-09-18  Andrew Cagney  <ac131313@redhat.com>

	* mi-main.c (mi_cmd_thread_select): Pass uiout to
	gdb_thread_select.
	(mi_cmd_thread_list_ids): Pass uiout to gdb_list_thread_ids.

	* mi-cmd-break.c (breakpoint_notify): Pass uiout to
	gdb_breakpoint_query.

2001-08-17  Keith Seitz  <keiths@redhat.com>

	* mi-cmd-var.c (varobj_update_one): Update call to
	varobj_update to reflect recent api change.

2001-07-26  Andrew Cagney  <ac131313@redhat.com>

	* mi-main.c: Include "gdb.h".
	* mi-cmd-break.c: Include "gdb.h".

2001-07-12  Andrew Cagney  <ac131313@redhat.com>

	* mi-main.c (mi_execute_command): Flush output after ``(gdb)''
	prompt.  Bug reported by David Whedon.
	(mi_execute_async_cli_command): Ditto.
	(mi_exec_async_cli_cmd_continuation): Ditto.
	(mi_command_loop): Ditto.

2001-07-10  Mark Kettenis  <kettenis@gnu.org>

	* mi-out.c (mi_out_new): Initialize suppress_ouput field of newly
	created `struct ui_out_data'.

2001-07-09  Kevin Buettner  <kevinb@redhat.com>

	* mi-main.c (register_changed_p, get_register): Use alloca()